--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,31 @@
 [tool.poetry]
 name = "bibliostratus"
-version = "1.20.0"
+version = "1.37.0"
 description = "Stratégie d'alignement d'URIs pour la Transition bibliographique"
 authors = ["Etienne Cavalié <lully1804@yahoo.fr>"]
 license = "GPL-3.0"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-lxml = "^4.2"
-pyinstaller = "^5.13.2"
-datetime
+python = ">=3.10,<3.13"
+pyinstaller = "^6.11.0"
+lxml = "^4.9.2"
 unidecode = "^1.3.6"
 urllib3 = "^1.26.15"
-random2
-tk = "^0.1.0"
 joblib = "^1.4.2"
 regex = "^2023.3.23"
-pprintpp
-imagecodecs
 pandas = "^2.0.1"
 numpy = "^1.26.4"
 PyQt6 = "^6.7.0"
-lxml = "^4.9.2"
 requests = "^2.28.2"
 SPARQLWrapper = "^2.0.0"
 openpyxl = "^3.1.2"
-smc
-smc.bibencodings = "^0.1"
+smc = "*"
+"smc.bibencodings" = "^0.1"
 pymarc = "^5.0.0"
 chardet = "^5.2.0"
+random2 = "*"
+pprintpp = "*"
+imagecodecs = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.6"
