--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,41 @@
-pyinstaller==5.13.2
-datetime
-unidecode==1.3.6
-urllib3==1.26.15
-random2
-tk==0.1.0
-joblib==1.4.2
-regex==2023.3.23
-pprintpp
-imagecodecs
-pandas==2.0.1
-numpy==1.26.4
-PyQt6==6.7.0
-lxml==4.9.2
-requests==2.28.2
-SPARQLWrapper==2.0.0
-openpyxl==3.1.2
-smc
-smc.bibencodings==0.1
-pymarc==5.0.0
+altgraph==0.17.4
+certifi==2025.8.3
 chardet==5.2.0
+charset-normalizer==3.4.3
+DateTime==5.5
+et_xmlfile==2.0.0
+idna==3.10
+imagecodecs==2025.3.30
+isodate==0.7.2
+joblib==1.4.2
+lxml==4.9.2
+numpy==1.26.4
+openpyxl==3.1.2
+packaging==25.0
+pandas==2.0.1
+pefile==2024.8.26
+pprintpp==0.4.0
+pyinstaller==5.13.2
+pyinstaller-hooks-contrib==2025.8
+pymarc==5.0.0
+pyparsing==3.2.4
+PyQt6==6.7.0
+PyQt6-Qt6==6.7.3
+PyQt6_sip==13.10.2
+pyserial==3.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pywin32-ctypes==0.2.3
+random2==1.0.2
+rdflib==7.1.4
+regex==2023.3.23
+requests==2.28.2
+six==1.17.0
+smc==0.5.3
+smc.bibencodings==0.1
+SPARQLWrapper==2.0.0
+tk==0.1.0
+tzdata==2025.2
+Unidecode==1.3.6
+urllib3==1.26.15
+zope.interface==8.0
